--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,42 @@
 # Log file
 *.log
 
+# macOS
+*.DS_Store
+.AppleDouble
+.LSOverride
+Thumbs.db
+
+# Next.js
+.next/
+out/
+build/
+.env*.local
+.env
+.vercel
+
+# Dependencies
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+
+# ESLint cache
+.eslintcache
+
+# Parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
 # BlueJ files
 *.ctxt
 
